# Nano-GPT-in-C-

./: CMakeLists.txt  README.md  bigram_lm.h  dataset.cpp  dataset.h  main.cpp  tiny_jim.txt
